--- a/app/public/views/account.jade
+++ b/app/public/views/account.jade
@@ -1,6 +1,6 @@
 
 // preset form values if we receive a userdata object //
-- user = typeof(udata) != 'undefined' ? udata : { }
+- user = typeof(userAccountData) != 'undefined' ? userAccountData : { }
 // store the userId on the client side in a hidden input field //
 input(type='hidden', value= user._id)#userId
 
@@ -37,7 +37,7 @@ input(type='hidden', value= user._id)#userId
             #pass-cg.control-group
                 label.control-label(for='pass-tf') Password
                 .controls
-                    input#pass-tf.input-xlarge(type='password', name='pass', value='')
+                    input#pass-tf.input-xlarge(type='password', name='password', value='')
             .form-actions
                 button(type='button')#account-form-btn1.btn
                 button(type='submit')#account-form-btn2.btn
