--- a/app/public/views/login.jade
+++ b/app/public/views/login.jade
@@ -9,7 +9,7 @@ block content
             label Username
             input(type="text", name="username", id='user-tf').span4.required
             label Password
-            input(type="password", name="pass", id='pass-tf').span4.required
+            input(type="password", name="password", id='pass-tf').span4.required
             button(type="submit")#btn-login.btn.btn-primary
                 i.icon-lock.icon-white
                 | Sign in
