--- a/app/public/views/modals/reset-password.jade
+++ b/app/public/views/modals/reset-password.jade
@@ -5,7 +5,7 @@
     div.modal-body
         form( method="post")#set-password-form.well.span5
             p Please enter your new password
-            input(type="password", name="pass", id='pass-tf').span5.required
+            input(type="password", name="password", id='pass-tf').span5.required
             button(type="submit")#submit.btn.btn-primary Submit
             div.alert.alert-error.hide
             button(data-dismiss="alert").close
